fix: inline-block add vertical-align

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,7 @@
   .tree-chart-container {
     display: inline-block;
     white-space: nowrap;
+    veryical-align: middle;
     position: relative;
     &:last-child, &.is-node-container {
       margin-bottom: 0 !important;
